--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Página com rodapé responsivo">
+    <meta name="keywords" content="responsivo, página, rodape">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Laura Sena">
     <link rel="shortcut icon" href="midia/icone.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/203556ef80.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Projeto - Rodapé Responsivo</title>
 </head>
 
 <body>
